# mower_simulator

./: CMakeLists.txt  LICENSE  README.md  setup_extra_libraries.sh
ARCHIVE/: oryginalne_polecenie.txt
ARCHIVE/SZKIELET_APLIKACJI/: .gitignore  CMakeLists.txt
ARCHIVE/SZKIELET_APLIKACJI/include/: Config.h  Lawn.h  Point.h
ARCHIVE/SZKIELET_APLIKACJI/include/simulation/: LawnSimulationView.h  SimulationEngine.h
ARCHIVE/SZKIELET_APLIKACJI/src/: Config.cc  Lawn.cc  Main.cc  Point.cc
ARCHIVE/SZKIELET_APLIKACJI/src/simulation/: LawnSimulationView.cc  SimulationEngine.cc
ARCHIVE/SZKIELET_APLIKACJI/tests/: LawnSimulationViewTests.cc  LawnTests.cc  PointTests.cc  SimulationTests.cc
CODE/: CMakeLists.txt  Doxyfile  README.md  coverage.html  setup_extra_libraries.sh
CODE/include/: Config.h  Constants.h  Engine.h  Lawn.h  MathHelper.h  Mower.h  MowerController.h  RenderTimeController.h  SimulationSnapshot.h  StateInterpolator.h
CODE/include/commands/: AddPointCommand.h  DeletePointCommand.h  GetCurrentAngleCommand.h  GetDistanceToPointCommand.h  ICommand.h  MoveToPointCommand.h  MowingOptionCommand.h  RotateCommand.h  RotateTowardsPointCommand.h
CODE/src/: Config.cc  Engine.cc  FileLogger.cc  Lawn.cc  Log.cc  Main.cc  MathHelper.cc  Mower.cc  MowerController.cc  Point.cc  StateInterpolator.cc  StateSimulation.cc  Visualizer.cc
CODE/src/commands/: DeletePointCommand.cc  GetCurrentAngleCommand.cc  MoveCommand.cc  MowingOptionCommand.cc
CODE/tests/: CommandTests.cc  ConfigTests.cc  EngineTests.cc  LogTests.cc  LoggerTests.cc  MowerControllerTests.cc  MowerTests.cc  PointTests.cc  RenderTimeControllerTests.cc  StateSimulationTests.cc
include/: Commands.h  Config.h  Constants.h  Engine.h  Exceptions.h  FileLogger.h  Lawn.h  Log.h  Logger.h  MathHelper.h  Mover.h  MowerController.h  Point.h  RenderTimeController.h  StateInterpolator.h  StateSimulation.h  Visualizer.h  config.h
include/commands/: GetCurrentPositionCommand.h  MoveCommand.h
include/simulation/: LawnSimulationView.h  SimulationEngine.h
src/: Commands.cc  Config.cc  Engine.cc  Exceptions.cc  FileLogger.cc  Lawn.cc  LawnVisualizer.cc  Log.cc  Logger.cc  Main.cc  MathHelper.cc  Mover.cc  Mower.cc  MowerController.cc  Point.cc  RenderTimeController.cc  StateInterpolator.cc  StateSimulation.cc  Visualizer.cc
src/commands/: AddPointCommand.cc  GetCurrentPositionCommand.cc  GetDistanceToPointCommand.cc  MoveCommand.cc  MoveToPointCommand.cc  RotateCommand.cc  RotateTowardsPointCommand.cc
src/simulation/: LawnSimulationView.cc  SimulationEngine.cc
tests/: ConfigTests.cc  EngineTests.cc  LawnSimulationViewTests.cc  LawnTests.cc  MoverTests.cc  PointTests.cc  RenderTimeControllerTests.cc  StateInterpolatorTests.cc  StateSimulationTests.cc  VisualizerTests.cc
